[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/level_object_sprites/Fishing hook.PNG" type="Texture" id=1]
[ext_resource path="res://src/level_objects/FishHook.gd" type="Script" id=2]
[ext_resource path="res://src/level_objects/DetectableRope.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.0
height = 484.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0
height = 480.0

[node name="FishHook" type="RigidBody2D" groups=["FishHook"]]
collision_layer = 4096
collision_mask = 0
gravity_scale = 10.0
linear_velocity = Vector2( 500, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -15, -8 )
rotation = -0.204738
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectableRope" type="Area2D" parent="." groups=["grabbablerope"]]
collision_layer = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectableRope"]
shape = SubResource( 2 )

[connection signal="body_entered" from="DetectableRope" to="." method="_on_DetectableRope_body_entered"]
[connection signal="body_exited" from="DetectableRope" to="." method="_on_DetectableRope_body_exited"]
